--- a/reference.bib
+++ b/reference.bib
@@ -36,7 +36,6 @@
   year      = {2018}
 }
 
-
 @article{Adams2009,
   author  = {Adams, Andrew and Gelfand, Natasha and Dolson, Jennifer and Levoy, Marc},
   title   = {Gaussian {KD-trees} for fast high-dimensional filtering},
@@ -64,6 +63,7 @@
   year      = {2003}
 }
 
+
 @article{Adikusuma2020,
   title   = {Fast construction of discrete geodesic graphs},
   author  = {Adikusuma, Yohanes Yudhi and Fang, Zheng and He, Ying},
@@ -80,7 +80,6 @@
   title     = {The conversation: Deep audio-visual speech enhancement},
   year      = {2018}
 }
-
 
 @inproceedings{Alayrac2020,
   title     = {Self-Supervised MultiModal Versatile Networks},
@@ -147,6 +146,7 @@
   year      = {2007}
 }
 
+
 @article{Attene2013,
   author  = {Attene, Marco and Campen, Marcel and Kobbelt, Leif},
   title   = {Polygon mesh repairing: An application perspective},
@@ -165,7 +165,6 @@
   number  = {4},
   journal = SIG
 }
-
 
 @inproceedings{Atzmon2020,
   title     = {{SAL}: Sign agnostic learning of shapes from raw data},
@@ -451,6 +450,7 @@
   year      = {2016}
 }
 
+
 @article{Bronstein2017,
   author  = {M. M. Bronstein and J. Bruna and Y. LeCun and A. Szlam and P. Vandergheynst},
   title   = {Geometric deep learning: Going beyond Euclidean data},
@@ -465,7 +465,6 @@
   booktitle = NeurIPS,
   year      = {2020}
 }
-
 
 @article{Bugliarello2021,
   title   = {Multimodal pretraining unmasked: A meta-analysis and a unified framework of vision-and-language {BERT}s},
@@ -482,6 +481,7 @@
   booktitle = CVPR,
   year      = {2012}
 }
+
 
 @article{Calakli2011,
   author  = {Calakli, Fatih and Taubin, Gabriel},
@@ -501,7 +501,6 @@
   volume  = {22},
   number  = {9-11}
 }
-
 
 @article{Cao2014,
   author  = {Cao, Chen and Hou, Qiming and Zhou, Kun},
@@ -552,6 +551,7 @@
   year      = {2017}
 }
 
+
 @inproceedings{Chellapilla2006,
   author    = {Chellapilla, Kumar and Puri, Sidd and Simard, Patrice},
   title     = {High performance convolutional neural networks for document processing},
@@ -567,7 +567,6 @@
   year      = {1990}
 }
 
-
 @article{Chen2003,
   author    = {Chen, Ding-Yun and Tian, Xiao-Pei and Shen, Yu-Te and Ouhyoung, Ming},
   title     = {On visual similarity based {3D} model retrieval},
@@ -576,6 +575,7 @@
   number    = {3},
   booktitle = CGF
 }
+
 
 @article{Chen2009,
   author  = {Xiaobai Chen and Aleksey Golovinskiy and Thomas Funkhouser},
@@ -586,13 +586,13 @@
   number  = {3}
 }
 
+
 @inproceedings{Chen2014,
   author    = {Chen, Dong and Ren, Shaoqing and Wei, Yichen and Cao, Xudong and Sun, Jian},
   title     = {Joint cascade face detection and alignment},
   booktitle = {ECCV},
   year      = {2014}
 }
-
 
 @article{Chen2018,
   author  = {L. {Chen} and G. {Papandreou} and I. {Kokkinos} and K. {Murphy} and A. L. {Yuille}},
@@ -625,13 +625,13 @@
   year      = {2020}
 }
 
+
 @inproceedings{Chen2020a,
   title     = {Big Self-Supervised Models are Strong Semi-Supervised Learners},
   author    = {Chen, Ting and Kornblith, Simon and Swersky, Kevin and Norouzi, Mohammad and Hinton, Geoffrey},
   booktitle = NeurIPS,
   year      = {2020}
 }
-
 
 @inproceedings{Chen2020b,
   title     = {A hierarchical graph network for {3D} object detection on point clouds},
@@ -640,7 +640,6 @@
   year      = {2020}
 }
 
-
 @inproceedings{Chen2021,
   author    = {Xinlei Chen and Kaiming He},
   title     = {Exploring Simple Siamese Representation Learning},
@@ -648,12 +647,14 @@
   year      = {2021}
 }
 
+
 @inproceedings{Chen2022,
   title     = {Scaling up Kernels in {3D CNNs}},
   author    = {Yukang Chen and Jianhui Liu and Xiaojuan Qi and X. Zhang and Jian Sun and Jiaya Jia},
   booktitle = NeurIPS,
   year      = {2022}
 }
+
 
 @inproceedings{Cheng2021,
   title     = {Back-Tracing Representative Points for Voting-based {3D} Object Detection in Point Clouds},
@@ -729,7 +730,6 @@
   number  = {4}
 }
 
-
 @article{Cignoni1998,
   author  = {P. Cignoni and C. Rocchini and R. Scopigno},
   title   = {Metro: measuring error on simplified surfaces},
@@ -745,6 +745,7 @@
   booktitle = {Proc. of the conference on Visualization},
   year      = {2000}
 }
+
 
 @article{Cohen2018,
   title   = {Spherical {CNNs}},
@@ -809,7 +810,6 @@
   year    = {1989}
 }
 
-
 @inproceedings{Dai2017,
   author    = {Dai, Angela and Qi, Charles R. and Niessner, Matthias},
   title     = {Shape completion using {3D}-encoder-predictor CNNs and shape synthesis},
@@ -824,6 +824,7 @@
   year      = {2017}
 }
 
+
 @inproceedings{Dai2018,
   author    = {Dai, Angela and Ritchie, Daniel and Bokeloh, Martin and Reed, Scott and Sturm, J{\"u}rgen and Nie{\ss}ner, Matthias},
   title     = {{ScanComplete}: Large-Scale Scene Completion and Semantic Segmentation for {3D} Scans},
@@ -837,7 +838,6 @@
   booktitle = ECCV,
   year      = {2018}
 }
-
 
 @article{DeGoes2011,
   author  = {De Goes, Fernando and Goldenstein, Siome and Desbrun, Mathieu and Velho, Luiz},
@@ -854,6 +854,7 @@
   booktitle = CVPR,
   year      = {2009}
 }
+
 
 @inproceedings{Deng2018,
   title     = {{PPF-FoldNet}: Unsupervised learning of rotation invariant 3D local descriptors},
@@ -1016,7 +1017,6 @@
   year      = {2018}
 }
 
-
 @inproceedings{Fey2019,
   title     = {Fast Graph Representation Learning with {PyTorch Geometric}},
   author    = {Fey, Matthias and Lenssen, Jan Eric},
@@ -1030,6 +1030,7 @@
   booktitle = CVPR,
   year      = {2016}
 }
+
 
 @article{Fish2014,
   author  = {Noa Fish and Melinos Averkiou and Oliver van Kaick and Olga Sorkine-Hornung and Daniel Cohen-Or and Niloy J. Mitra},
@@ -1054,7 +1055,6 @@
   year      = {2000}
 }
 
-
 @article{Fuhrmann2014,
   author  = {Fuhrmann, Simon and Goesele, Michael},
   title   = {Floating scale surface reconstruction},
@@ -1064,7 +1064,6 @@
   number  = {4}
 }
 
-
 @article{Furuya2019,
   author  = {Takahiko Furuya and Ryutarou Ohbuchi},
   title   = {Feature set aggregator: unsupervised representation learning of sets for their comparison},
@@ -1073,6 +1072,7 @@
   volume  = {78}
 }
 
+
 @inproceedings{Ganapathi2018,
   author    = {Vignesh Ganapathi-Subramanian and Olga Diamanti and Soeren Pirk and Chengcheng Tang and Matthias Nießner and Leonidas J. Guibas},
   booktitle = threeDV,
@@ -1080,13 +1080,13 @@
   year      = {2018}
 }
 
+
 @inproceedings{GarciaGarcia2016,
   author    = {A. Garcia-Garcia and F. Gomez-Donoso and J. Garcia-Rodriguez and S. Orts-Escolano and M. Cazorla and J. Azorin-Lopez},
   booktitle = {2016 International Joint Conference on Neural Networks (IJCNN)},
   title     = {{PointNet}: A {3D} convolutional neural network for real-time object class recognition},
   year      = {2016}
 }
-
 
 @inproceedings{Gehring2017,
   author    = {Jonas Gehring and Michael Auli and David Grangier and Denis Yarats and Yann N. Dauphin},
@@ -1102,13 +1102,13 @@
   year      = {2020}
 }
 
+
 @inproceedings{Gilmer2017,
   title     = {Neural message passing for quantum chemistry},
   author    = {Gilmer, Justin and Schoenholz, Samuel S and Riley, Patrick F and Vinyals, Oriol and Dahl, George E},
   booktitle = ICML,
   year      = {2017}
 }
-
 
 @inproceedings{Girdhar2016,
   title     = {Learning a predictable and generative vector representation for objects},
@@ -1117,13 +1117,13 @@
   year      = {2016}
 }
 
-
 @inproceedings{Glorot2011,
   title     = {Deep sparse rectifier neural networks},
   author    = {Glorot, Xavier and Bordes, Antoine and Bengio, Yoshua},
   booktitle = {International Conference on Artificial Intelligence and Statistics},
   year      = {2011}
 }
+
 
 @article{Golovinskiy2008,
   author  = {Golovinskiy, Aleksey and Funkhouser, Thomas},
@@ -1133,6 +1133,7 @@
   volume  = {27},
   number  = {5}
 }
+
 
 @article{Golovinskiy2009,
   author  = {Aleksey Golovinskiy and Thomas Funkhouser},
@@ -1331,7 +1332,6 @@
   year      = {2016}
 }
 
-
 @article{Hanocka2019,
   author  = {Hanocka, Rana and Hertz, Amir and Fish, Noa and Giryes, Raja and Fleishman, Shachar and Cohen-Or, Daniel},
   journal = SIG,
@@ -1340,7 +1340,6 @@
   number  = {4},
   volume  = {38}
 }
-
 
 @article{Harary2014,
   author  = {Harary, Gur and Tal, Ayellet and Grinspun, Eitan},
@@ -1361,12 +1360,14 @@
   year    = {1996}
 }
 
+
 @inproceedings{Hassani2019,
   title     = {Unsupervised multi-task feature learning on point clouds},
   author    = {Hassani, Kaveh and Haley, Mike},
   booktitle = ICCV,
   year      = {2019}
 }
+
 
 @article{Hassani2022,
   title   = {Dilated neighborhood attention transformer},
@@ -1483,14 +1484,12 @@
   year    = {2020}
 }
 
-
 @inproceedings{Hu2020,
   title     = {{JSENet}: Joint semantic segmentation and edge detection network for 3d point clouds},
   author    = {Hu, Zeyu and Zhen, Mingmin and Bai, Xuyang and Fu, Hongbo and Tai, Chiew-lan},
   booktitle = ECCV,
   year      = {2020}
 }
-
 
 @article{Huang2006,
   author  = {Huang, Jin and Shi, Xiaohan and Liu, Xinguo and Zhou, Kun and Wei, Li-Yi and Teng, Shang-Hua and Bao, Hujun and Guo, Baining and Shum, Heung-Yeung},
@@ -1501,6 +1500,7 @@
   number  = {3}
 }
 
+
 @article{Huang2011,
   author  = {Huang, Guang-Bin and Wang, Dian Hui and Lan, Yuan},
   title   = {{Extreme learning machines: a survey}},
@@ -1509,6 +1509,7 @@
   volume  = {2},
   number  = {2}
 }
+
 
 @article{Huang2011a,
   author  = {Huang, Qixing and Koltun, Vladlen and Guibas, Leonidas},
@@ -1559,7 +1560,6 @@
   year      = {2018}
 }
 
-
 @inproceedings{Jampani2016,
   author    = {Jampani, Varun and Kiefel, Martin and Gehler, Peter V.},
   title     = {Learning sparse high dimensional filters: image filtering, dense {CRFs} and bilateral neural networks},
@@ -1567,13 +1567,13 @@
   year      = {2016}
 }
 
-
 @inproceedings{Jia2014,
   author    = {Jia, Yangqing and Shelhamer, Evan and Donahue, Jeff and Karayev, Sergey and Long, Jonathan and Girshick, Ross and Guadarrama, Sergio and Darrell, Trevor},
   title     = {{Caffe}: convolutional architecture for fast feature embedding},
   booktitle = {ACM Multimedia (ACM MM)},
   year      = {2014}
 }
+
 
 @article{Jia2015,
   author  = {Zhaoyin Jia and Andrew C. Gallagher and Ashutosh Saxena and Tsuhan Chen},
@@ -1583,6 +1583,7 @@
   volume  = {37},
   number  = {5}
 }
+
 
 @inproceedings{Jiang2019,
   author    = {Jiang, Jianwen and Bao, Di and Chen, Ziqiang and Zhao, Xibin and Gao, Yue},
@@ -1754,7 +1755,6 @@
   year      = {2020}
 }
 
-
 @article{Karras2021,
   author  = {Tero Karras and Miika Aittala and Samuli Laine and Erik H\"{a}rk\"{o}nen and Janne Hellsten and Jaakko Lehtinen and Timo Aila},
   journal = {arXiv preprint arXiv:2106.12423},
@@ -1768,6 +1768,7 @@
   booktitle = CVPR,
   year      = {2018}
 }
+
 
 @inproceedings{Kazhdan2003,
   title     = {Rotation invariant spherical harmonic representation of {3D} shape descriptors},
@@ -2166,7 +2167,6 @@
   year      = {2020}
 }
 
-
 @article{Liu2020a,
   title   = {{P4Contrast}: Contrastive Learning with Pairs of Point-Pixel Pairs for {RGB-D} Scene Understanding},
   author  = {Yunze Liu and Li Yi and Shanghang Zhang and Qingnan Fan and Thomas Funkhouser and Hao Dong},
@@ -2180,6 +2180,7 @@
   booktitle = ECCV,
   year      = {2020}
 }
+
 
 @article{Liu2021,
   title   = {{OctSurf}: Efficient hierarchical voxel-based molecular surface representation for protein-ligand affinity prediction},
@@ -2237,7 +2238,6 @@
   publisher = {Nelson Education}
 }
 
-
 @inproceedings{Long2015,
   author    = {Jonathan Long and Evan Shelhamer and Trevor Darrell},
   title     = {Fully convolutional models for semantic segmentation},
@@ -2252,6 +2252,7 @@
   year      = {1987}
 }
 
+
 @inproceedings{Loshchilov2017,
   title     = {Decoupled weight decay regularization},
   author    = {Loshchilov, Ilya and Hutter, Frank},
@@ -2265,7 +2266,6 @@
   booktitle = {the 1st IEE International Conference on Artificial Neural Networks},
   year      = {1989}
 }
-
 
 @article{Lu2016,
   author  = {Xuequan Lu and Zhigang Deng and and Wenzhi Chen},
@@ -2283,13 +2283,13 @@
   year      = {2017}
 }
 
+
 @article{Lun2017a,
   author  = {Lun, Zhaoliang and Gadelha, Matheus and Kalogerakis, Evangelos and Maji, Subhransu and Wang, Rui},
   title   = {{3D} shape reconstruction from sketches via multi-view convolutional networks},
   journal = ThreeDV,
   year    = {2017}
 }
-
 
 @inproceedings{Lyu2020,
   author    = {Yecheng Lyu and Xinming Huang and Ziming Zhang},
@@ -2298,13 +2298,13 @@
   year      = {2020}
 }
 
-
 @article{Maaten2008,
   author  = {Maaten, Laurens van der and Hinton, Geoffrey},
   title   = {Visualizing data using {t-SNE}},
   journal = {Journal of machine learning research},
   year    = {2008}
 }
+
 
 @inproceedings{Maes2010,
   author    = {Maes, C. and Fabry, T. and Keustermans, J. and Smeets, D. and Suetens, P. and Vandermeulen, D.},
@@ -2331,13 +2331,13 @@
   number  = {6}
 }
 
+
 @inproceedings{Mao2021,
   title     = {Voxel Transformer for {3D} Object Detection},
   author    = {Mao, Jiageng and Xue, Yujing and Niu, Minzhe and Bai, Haoyue and Feng, Jiashi and Liang, Xiaodan and Xu, Hang and Xu, Chunjing},
   booktitle = ICCV,
   year      = {2021}
 }
-
 
 @article{Martel2021,
   title   = {{ACORN}: {Adaptive} coordinate networks for neural scene representation},
@@ -2354,6 +2354,7 @@
   booktitle = ICCV,
   year      = {2015}
 }
+
 
 @inproceedings{Maturana2015,
   author    = {Maturana, Daniel and Scherer, Sebastian},
@@ -2634,6 +2635,13 @@
   year      = {2022}
 }
 
+@inproceedings{Paszke2019,
+  author    = {Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury, James and Chanan, Gregory and Killeen, Trevor and Lin, Zeming and Gimelshein, Natalia and Antiga, Luca and Desmaison, Alban and Kopf, Andreas and Yang, Edward and DeVito, Zachary and Raison, Martin and Tejani, Alykhan and Chilamkurthy, Sasank and Steiner, Benoit and Fang, Lu and Bai, Junjie and Chintala, Soumith},
+  booktitle = NeurIPS,
+  title     = {{PyTorch}: An Imperative Style, High-Performance Deep Learning Library},
+  year      = {2019}
+}
+
 @inproceedings{Pathak2017,
   author    = {Pathak, Deepak and Girshick, Ross and Doll{\'a}r, Piotr and Darrell, Trevor and Hariharan, Bharath},
   booktitle = CVPR,
@@ -2741,6 +2749,15 @@
   author  = {Raffel, Colin and Shazeer, Noam and Roberts, Adam and Lee, Katherine and Narang, Sharan and Matena, Michael and Zhou, Yanqi and Li, Wei and Liu, Peter J},
   journal = {Journal of Machine Learning Research},
   volume  = {21},
+  year    = {2020}
+}
+
+@article{Raffel2020,
+  title   = {Exploring the limits of transfer learning with a unified text-to-text transformer},
+  author  = {Raffel, Colin and Shazeer, Noam and Roberts, Adam and Lee, Katherine and Narang, Sharan and Matena, Michael and Zhou, Yanqi and Li, Wei and Liu, Peter J and others},
+  journal = {J. Mach. Learn. Res.},
+  volume  = {21},
+  number  = {140},
   year    = {2020}
 }
 
