--- a/reference.bib
+++ b/reference.bib
@@ -45,7 +45,6 @@
   number  = {3}
 }
 
-
 @article{Adams2010,
   author  = {Adams, Andrew and Baek, Jongmin and Davis, Myers Abraham},
   title   = {Fast high-dimensional filtering using the permutohedral lattice},
@@ -81,13 +80,13 @@
   year      = {2018}
 }
 
+
 @inproceedings{Alayrac2020,
   title     = {Self-Supervised MultiModal Versatile Networks},
   author    = {Alayrac, Jean-Baptiste and Recasens, Adria and Schneider, Rosalia and Arandjelovic, Relja and Ramapuram, Jason and De Fauw, Jeffrey and Smaira, Lucas and Dieleman, Sander and Zisserman, Andrew},
   booktitle = NeurIPS,
   year      = {2020}
 }
-
 
 @article{Alhashim2012,
   author  = {Alhashim, Ibraheem and Zhang, Hao and Liu, Ligang},
@@ -166,13 +165,13 @@
   journal = SIG
 }
 
+
 @inproceedings{Atzmon2020,
   title     = {{SAL}: Sign agnostic learning of shapes from raw data},
   author    = {Atzmon, Matan and Lipman, Yaron},
   booktitle = CVPR,
   year      = {2020}
 }
-
 
 @inproceedings{Atzmon2021,
   title     = {{SALD}: Sign Agnostic Learning with Derivatives},
@@ -466,6 +465,7 @@
   year      = {2020}
 }
 
+
 @article{Bugliarello2021,
   title   = {Multimodal pretraining unmasked: A meta-analysis and a unified framework of vision-and-language {BERT}s},
   author  = {Bugliarello, Emanuele and Cotterell, Ryan and Okazaki, Naoaki and Elliott, Desmond},
@@ -473,7 +473,6 @@
   volume  = {9},
   year    = {2021}
 }
-
 
 @inproceedings{Burger2012,
   author    = {Burger, H.C. and Schuler, C.J. and Harmeling, S.},
@@ -502,6 +501,7 @@
   number  = {9-11}
 }
 
+
 @article{Cao2014,
   author  = {Cao, Chen and Hou, Qiming and Zhou, Kun},
   title   = {Displaced dynamic expression regression for real-time facial tracking and animation},
@@ -510,7 +510,6 @@
   volume  = {33},
   number  = {4}
 }
-
 
 @inproceedings{Cao2018,
   author    = {Cao, Yan-Pei and Liu, Zheng-Ning and Kuang, Zheng-Fei and Kobbelt, Leif and Hu, Shi-Min},
@@ -567,6 +566,7 @@
   year      = {1990}
 }
 
+
 @article{Chen2003,
   author    = {Chen, Ding-Yun and Tian, Xiao-Pei and Shen, Yu-Te and Ouhyoung, Ming},
   title     = {On visual similarity based {3D} model retrieval},
@@ -575,7 +575,6 @@
   number    = {3},
   booktitle = CGF
 }
-
 
 @article{Chen2009,
   author  = {Xiaobai Chen and Aleksey Golovinskiy and Thomas Funkhouser},
@@ -594,6 +593,7 @@
   year      = {2014}
 }
 
+
 @article{Chen2018,
   author  = {L. {Chen} and G. {Papandreou} and I. {Kokkinos} and K. {Murphy} and A. L. {Yuille}},
   title   = {{DeepLab}: Semantic Image Segmentation with Deep Convolutional Nets, Atrous Convolution, and Fully Connected {CRFs}},
@@ -610,13 +610,13 @@
   year      = {2019}
 }
 
-
 @inproceedings{Chen2019a,
   author    = {Zhiqin Chen and Kangxue Yin and Matthew Fisher and Siddhartha Chaudhuri and Hao Zhang},
   title     = {{BAE-NET}: Branched autoencoder for shape co-segmentation},
   booktitle = ICCV,
   year      = {2019}
 }
+
 
 @inproceedings{Chen2020,
   title     = {A simple framework for contrastive learning of visual representations},
@@ -625,13 +625,13 @@
   year      = {2020}
 }
 
-
 @inproceedings{Chen2020a,
   title     = {Big Self-Supervised Models are Strong Semi-Supervised Learners},
   author    = {Chen, Ting and Kornblith, Simon and Swersky, Kevin and Norouzi, Mohammad and Hinton, Geoffrey},
   booktitle = NeurIPS,
   year      = {2020}
 }
+
 
 @inproceedings{Chen2020b,
   title     = {A hierarchical graph network for {3D} object detection on point clouds},
@@ -647,7 +647,6 @@
   year      = {2021}
 }
 
-
 @inproceedings{Chen2022,
   title     = {Scaling up Kernels in {3D CNNs}},
   author    = {Yukang Chen and Jianhui Liu and Xiaojuan Qi and X. Zhang and Jian Sun and Jiaya Jia},
@@ -662,6 +661,7 @@
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @inproceedings{Cheng2022,
   title     = {{PatchFormer}: A versatile {3D} transformer based on patch attention},
@@ -746,13 +746,13 @@
   year      = {2000}
 }
 
-
 @article{Cohen2018,
   title   = {Spherical {CNNs}},
   author  = {Cohen, Taco S and Geiger, Mario and K{\"o}hler, Jonas and Welling, Max},
   journal = {arXiv preprint arXiv:1801.10130},
   year    = {2018}
 }
+
 
 @article{CohenSteiner2004,
   author  = {Cohen-Steiner, David and Alliez, Pierre and Desbrun, Mathieu},
@@ -792,6 +792,13 @@
   volume  = {32},
   number  = {5},
   year    = {2013}
+}
+
+@misc{cublas2022,
+  title        = {{cuBLAS}},
+  author       = {cuBLAS},
+  howpublished = {\url{https://docs.nvidia.com/cuda/cublas}},
+  year         = {2022}
 }
 
 @inproceedings{Curless1996,
