--- a/reference.bib
+++ b/reference.bib
@@ -36,6 +36,7 @@
   year      = {2018}
 }
 
+
 @article{Adams2009,
   author  = {Adams, Andrew and Gelfand, Natasha and Dolson, Jennifer and Levoy, Marc},
   title   = {Gaussian {KD-trees} for fast high-dimensional filtering},
@@ -53,7 +54,6 @@
   volume  = {29},
   number  = {2}
 }
-
 
 @inproceedings{Adamson2003,
   author    = {Adamson, Anders and Alexa, Marc},
@@ -88,6 +88,7 @@
   year      = {2020}
 }
 
+
 @article{Alhashim2012,
   author  = {Alhashim, Ibraheem and Zhang, Hao and Liu, Ligang},
   title   = {Detail-replicating shape stretching},
@@ -96,7 +97,6 @@
   volume  = {28},
   number  = {12}
 }
-
 
 @inproceedings{Andersen2009,
   author    = {Andersen, Vedrana and Desbrun, Mathieu and B{\ae}rentzen, J. Andreas and Aan{\ae}s, Henrik},
@@ -173,13 +173,13 @@
   year      = {2020}
 }
 
+
 @inproceedings{Atzmon2021,
   title     = {{SALD}: Sign Agnostic Learning with Derivatives},
   author    = {Atzmon, Matan and Lipman, Yaron},
   booktitle = ICLR,
   year      = {2021}
 }
-
 
 @article{Au2012,
   author  = {Au, O.K.-C. and Youyi Zheng and Menglin Chen and Pengfei Xu and Chiew-Lan Tai},
@@ -474,13 +474,13 @@
   year    = {2021}
 }
 
+
 @inproceedings{Burger2012,
   author    = {Burger, H.C. and Schuler, C.J. and Harmeling, S.},
   title     = {Image denoising: Can plain neural networks compete with {BM3D}?},
   booktitle = CVPR,
   year      = {2012}
 }
-
 
 @article{Calakli2011,
   author  = {Calakli, Fatih and Taubin, Gabriel},
@@ -511,13 +511,13 @@
   number  = {4}
 }
 
+
 @inproceedings{Cao2018,
   author    = {Cao, Yan-Pei and Liu, Zheng-Ning and Kuang, Zheng-Fei and Kobbelt, Leif and Hu, Shi-Min},
   title     = {Learning to reconstruct high-quality {3D} shapes with cascaded fully convolutional networks},
   booktitle = ECCV,
   year      = {2018}
 }
-
 
 @inproceedings{Caron2018,
   author    = {Caron, Mathilde and Bojanowski, Piotr and Joulin, Armand and Douze, Matthijs},
@@ -576,6 +576,7 @@
   booktitle = CGF
 }
 
+
 @article{Chen2009,
   author  = {Xiaobai Chen and Aleksey Golovinskiy and Thomas Funkhouser},
   title   = {A benchmark for {3D} mesh segmentation},
@@ -584,7 +585,6 @@
   volume  = {28},
   number  = {3}
 }
-
 
 @inproceedings{Chen2014,
   author    = {Chen, Dong and Ren, Shaoqing and Wei, Yichen and Cao, Xudong and Sun, Jian},
@@ -603,6 +603,7 @@
   number  = {4}
 }
 
+
 @inproceedings{Chen2019,
   title     = {Learning implicit fields for generative shape modeling},
   author    = {Chen, Zhiqin and Zhang, Hao},
@@ -617,13 +618,13 @@
   year      = {2019}
 }
 
-
 @inproceedings{Chen2020,
   title     = {A simple framework for contrastive learning of visual representations},
   author    = {Chen, Ting and Kornblith, Simon and Norouzi, Mohammad and Hinton, Geoffrey},
   booktitle = ICML,
   year      = {2020}
 }
+
 
 @inproceedings{Chen2020a,
   title     = {Big Self-Supervised Models are Strong Semi-Supervised Learners},
@@ -632,13 +633,13 @@
   year      = {2020}
 }
 
-
 @inproceedings{Chen2020b,
   title     = {A hierarchical graph network for {3D} object detection on point clouds},
   author    = {Chen, Jintai and Lei, Biwen and Song, Qingyu and Ying, Haochao and Chen, Danny Z and Wu, Jian},
   booktitle = CVPR,
   year      = {2020}
 }
+
 
 @inproceedings{Chen2021,
   author    = {Xinlei Chen and Kaiming He},
@@ -654,7 +655,6 @@
   year      = {2022}
 }
 
-
 @inproceedings{Cheng2021,
   title     = {Back-Tracing Representative Points for Voting-based {3D} Object Detection in Point Clouds},
   author    = {Cheng, Bowen and Sheng, Lu and Shi, Shaoshuai and Yang, Ming and Xu, Dong},
@@ -669,6 +669,7 @@
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @inproceedings{Chiang2019,
   title     = {A unified point-based framework for {3D} segmentation},
@@ -753,7 +754,6 @@
   year    = {2018}
 }
 
-
 @article{CohenSteiner2004,
   author  = {Cohen-Steiner, David and Alliez, Pierre and Desbrun, Mathieu},
   journal = SIG,
@@ -763,11 +763,20 @@
   volume  = {23}
 }
 
+
 @misc{Contributors2018,
   author = {Wikipedia Contributors},
   title  = {{Data-driven science --- Wikipedia{,}} The Free Encyclopedia},
   year   = {2018}
 }
+
+@inproceedings{Cordonnier2020,
+  title     = {On the relationship between self-attention and convolutional layers},
+  author    = {Cordonnier, Jean-Baptiste and Loukas, Andreas and Jaggi, Martin},
+  booktitle = ICLR,
+  year      = {2020}
+}
+
 
 @article{Cornea2007,
   author  = {Cornea, Nicu D. and Silver, Deborah and Min, Patrick},
