--- a/reference.bib
+++ b/reference.bib
@@ -37,6 +37,7 @@
 }
 
 
+
 @article{Adams2009,
   author  = {Adams, Andrew and Gelfand, Natasha and Dolson, Jennifer and Levoy, Marc},
   title   = {Gaussian {KD-trees} for fast high-dimensional filtering},
@@ -45,6 +46,7 @@
   volume  = {28},
   number  = {3}
 }
+
 
 @article{Adams2010,
   author  = {Adams, Andrew and Baek, Jongmin and Davis, Myers Abraham},
@@ -61,7 +63,6 @@
   booktitle = SGPOLD,
   year      = {2003}
 }
-
 
 @article{Adikusuma2020,
   title   = {Fast construction of discrete geodesic graphs},
@@ -98,13 +99,13 @@
   number  = {12}
 }
 
+
 @inproceedings{Andersen2009,
   author    = {Andersen, Vedrana and Desbrun, Mathieu and B{\ae}rentzen, J. Andreas and Aan{\ae}s, Henrik},
   title     = {Height and tilt geometric texture},
   booktitle = {Proc. of the 5th International Symposium on Advances in Visual Computing: Part I},
   year      = {2009}
 }
-
 
 @inproceedings{Ankerst1999,
   author    = {Ankerst, Mihael and Kastenm{\"u}ller, Gabiand Kriegel, Hans-Peter and Seidl, Thomas},
@@ -181,6 +182,7 @@
   year      = {2021}
 }
 
+
 @article{Au2012,
   author  = {Au, O.K.-C. and Youyi Zheng and Menglin Chen and Pengfei Xu and Chiew-Lan Tai},
   title   = {Mesh segmentation with concavity-aware fields},
@@ -189,7 +191,6 @@
   volume  = {18},
   number  = {7}
 }
-
 
 @inproceedings{Aubry2011,
   author    = {Aubry, Mathieu and Schlickewei, Ulrich and Cremers, Daniel},
@@ -482,6 +483,7 @@
   year      = {2012}
 }
 
+
 @article{Calakli2011,
   author  = {Calakli, Fatih and Taubin, Gabriel},
   title   = {{SSD}: Smooth signed distance surface reconstruction},
@@ -490,7 +492,6 @@
   volume  = {30},
   number  = {7}
 }
-
 
 @article{Canas2006,
   author  = {Ca\~{n}as, Guillermo D. and Gortler, Steven J.},
@@ -519,13 +520,13 @@
   year      = {2018}
 }
 
+
 @inproceedings{Caron2018,
   author    = {Caron, Mathilde and Bojanowski, Piotr and Joulin, Armand and Douze, Matthijs},
   title     = {Deep clustering for unsupervised learning of visual features},
   booktitle = ECCV,
   year      = {2018}
 }
-
 
 @inproceedings{Chabra2020,
   title     = {Deep Local Shapes: Learning Local {SDF} Priors for Detailed {3D} Reconstruction},
@@ -586,13 +587,13 @@
   number  = {3}
 }
 
+
 @inproceedings{Chen2014,
   author    = {Chen, Dong and Ren, Shaoqing and Wei, Yichen and Cao, Xudong and Sun, Jian},
   title     = {Joint cascade face detection and alignment},
   booktitle = {ECCV},
   year      = {2014}
 }
-
 
 @article{Chen2018,
   author  = {L. {Chen} and G. {Papandreou} and I. {Kokkinos} and K. {Murphy} and A. L. {Yuille}},
@@ -611,6 +612,7 @@
   year      = {2019}
 }
 
+
 @inproceedings{Chen2019a,
   author    = {Zhiqin Chen and Kangxue Yin and Matthew Fisher and Siddhartha Chaudhuri and Hao Zhang},
   title     = {{BAE-NET}: Branched autoencoder for shape co-segmentation},
@@ -625,13 +627,13 @@
   year      = {2020}
 }
 
-
 @inproceedings{Chen2020a,
   title     = {Big Self-Supervised Models are Strong Semi-Supervised Learners},
   author    = {Chen, Ting and Kornblith, Simon and Swersky, Kevin and Norouzi, Mohammad and Hinton, Geoffrey},
   booktitle = NeurIPS,
   year      = {2020}
 }
+
 
 @inproceedings{Chen2020b,
   title     = {A hierarchical graph network for {3D} object detection on point clouds},
@@ -640,13 +642,13 @@
   year      = {2020}
 }
 
-
 @inproceedings{Chen2021,
   author    = {Xinlei Chen and Kaiming He},
   title     = {Exploring Simple Siamese Representation Learning},
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @inproceedings{Chen2022,
   title     = {Scaling up Kernels in {3D CNNs}},
@@ -662,7 +664,6 @@
   year      = {2021}
 }
 
-
 @inproceedings{Cheng2022,
   title     = {{PatchFormer}: A versatile {3D} transformer based on patch attention},
   author    = {Cheng, Zhang and Wan, Haocheng and Shen, Xinyi and Wu, Zizhao},
@@ -677,6 +678,7 @@
   booktitle = threeDV,
   year      = {2019}
 }
+
 
 @inproceedings{Chibane2020,
   title     = {Implicit functions in feature space for 3d shape reconstruction and completion},
@@ -763,12 +765,12 @@
   volume  = {23}
 }
 
-
 @misc{Contributors2018,
   author = {Wikipedia Contributors},
   title  = {{Data-driven science --- Wikipedia{,}} The Free Encyclopedia},
   year   = {2018}
 }
+
 
 @inproceedings{Cordonnier2020,
   title     = {On the relationship between self-attention and convolutional layers},
@@ -776,7 +778,6 @@
   booktitle = ICLR,
   year      = {2020}
 }
-
 
 @article{Cornea2007,
   author  = {Cornea, Nicu D. and Silver, Deborah and Min, Patrick},
@@ -786,6 +787,7 @@
   volume  = {13},
   number  = {3}
 }
+
 
 @inproceedings{Crane2013,
   author    = {Keenan Crane and Fernando de Goes and Mathieu Desbrun and Peter Schr\"{o}der},
@@ -840,13 +842,13 @@
   year      = {2017}
 }
 
-
 @inproceedings{Dai2018,
   author    = {Dai, Angela and Ritchie, Daniel and Bokeloh, Martin and Reed, Scott and Sturm, J{\"u}rgen and Nie{\ss}ner, Matthias},
   title     = {{ScanComplete}: Large-Scale Scene Completion and Semantic Segmentation for {3D} Scans},
   booktitle = CVPR,
   year      = {2018}
 }
+
 
 @inproceedings{Dai2018a,
   title     = {{3DMV}: Joint {3D}-multi-view prediction for {3D} semantic scene segmentation},
@@ -871,13 +873,13 @@
   year      = {2009}
 }
 
-
 @inproceedings{Deng2018,
   title     = {{PPF-FoldNet}: Unsupervised learning of rotation invariant 3D local descriptors},
   author    = {Deng, Haowen and Birdal, Tolga and Ilic, Slobodan},
   booktitle = ECCV,
   year      = {2018}
 }
+
 
 @inproceedings{Desbrun1999,
   author    = {Desbrun, Mathieu and Meyer, Mark and Schr\"{o}der, Peter and Barr, Alan H.},
@@ -1047,13 +1049,13 @@
   year      = {2016}
 }
 
-
 @article{Fish2014,
   author  = {Noa Fish and Melinos Averkiou and Oliver van Kaick and Olga Sorkine-Hornung and Daniel Cohen-Or and Niloy J. Mitra},
   title   = {Meta-representation of shape families},
   journal = SIG,
   year    = {2014}
 }
+
 
 @article{Fleishman2003,
   author  = {Fleishman, Shachar and Drori, Iddo and Cohen-Or, Daniel},
@@ -1088,7 +1090,6 @@
   volume  = {78}
 }
 
-
 @inproceedings{Ganapathi2018,
   author    = {Vignesh Ganapathi-Subramanian and Olga Diamanti and Soeren Pirk and Chengcheng Tang and Matthias Nießner and Leonidas J. Guibas},
   booktitle = threeDV,
@@ -1104,6 +1105,7 @@
   year      = {2016}
 }
 
+
 @inproceedings{Gehring2017,
   author    = {Jonas Gehring and Michael Auli and David Grangier and Denis Yarats and Yann N. Dauphin},
   title     = {Convolutional sequence to sequence learning},
@@ -1118,13 +1120,13 @@
   year      = {2020}
 }
 
-
 @inproceedings{Gilmer2017,
   title     = {Neural message passing for quantum chemistry},
   author    = {Gilmer, Justin and Schoenholz, Samuel S and Riley, Patrick F and Vinyals, Oriol and Dahl, George E},
   booktitle = ICML,
   year      = {2017}
 }
+
 
 @inproceedings{Girdhar2016,
   title     = {Learning a predictable and generative vector representation for objects},
@@ -1139,7 +1141,6 @@
   booktitle = {International Conference on Artificial Intelligence and Statistics},
   year      = {2011}
 }
-
 
 @article{Golovinskiy2008,
   author  = {Golovinskiy, Aleksey and Funkhouser, Thomas},
@@ -1159,6 +1160,7 @@
   journal = {Computers \& Graphics},
   year    = {2009}
 }
+
 
 @book{Goodfellow2016,
   title     = {Deep Learning},
@@ -1366,7 +1368,6 @@
   number  = {1}
 }
 
-
 @article{Hart1996,
   title   = {Sphere tracing: A geometric method for the antialiased ray tracing of implicit surfaces},
   author  = {Hart, John C},
@@ -1391,6 +1392,7 @@
   journal = {arXiv preprint arXiv:2209.15001},
   year    = {2022}
 }
+
 
 @article{Hassouna2009,
   author  = {M. S. Hassouna and A. A. Farag},
@@ -1516,7 +1518,6 @@
   number  = {3}
 }
 
-
 @article{Huang2011,
   author  = {Huang, Guang-Bin and Wang, Dian Hui and Lan, Yuan},
   title   = {{Extreme learning machines: a survey}},
@@ -1535,6 +1536,7 @@
   volume  = {30},
   number  = {6}
 }
+
 
 @inproceedings{Huang2016,
   title     = {Deep networks with stochastic depth},
@@ -1590,7 +1592,6 @@
   year      = {2014}
 }
 
-
 @article{Jia2015,
   author  = {Zhaoyin Jia and Andrew C. Gallagher and Ashutosh Saxena and Tsuhan Chen},
   title   = {{3D} reasoning from blocks to, stability},
@@ -1607,6 +1608,7 @@
   title     = {{MLVCNN}: Multi-Loop-View Convolutional Neural Network for {3D} Shape Retrieval},
   year      = {2019}
 }
+
 
 @inproceedings{Jiang2020,
   title     = {Local implicit grid representations for {3D} scenes},
@@ -1785,7 +1787,6 @@
   year      = {2018}
 }
 
-
 @inproceedings{Kazhdan2003,
   title     = {Rotation invariant spherical harmonic representation of {3D} shape descriptors},
   author    = {Kazhdan, Michael and Funkhouser, Thomas and Rusinkiewicz, Szymon},
@@ -1793,6 +1794,7 @@
   volume    = {6},
   year      = {2003}
 }
+
 
 @inproceedings{Kazhdan2006,
   author    = {Kazhdan, Michael and Bolitho, Matthew and Hoppe, Hugues},
@@ -2197,13 +2199,13 @@
   year      = {2020}
 }
 
-
 @article{Liu2021,
   title   = {{OctSurf}: Efficient hierarchical voxel-based molecular surface representation for protein-ligand affinity prediction},
   journal = {Journal of Molecular Graphics and Modelling},
   year    = {2021},
   author  = {Qinqing Liu and Peng-Shuai Wang and Chunjiang Zhu and Blake Blumenfeld Gaines and Tan Zhu and Jinbo Bi and Minghu Song}
 }
+
 
 @inproceedings{Liu2021a,
   title     = {Swin transformer: Hierarchical vision transformer using shifted windows},
@@ -2268,13 +2270,13 @@
   year      = {1987}
 }
 
-
 @inproceedings{Loshchilov2017,
   title     = {Decoupled weight decay regularization},
   author    = {Loshchilov, Ilya and Hutter, Frank},
   booktitle = ICLR,
   year      = {2019}
 }
+
 
 @inproceedings{Lowe1989,
   author    = {Lowe, David},
@@ -2299,7 +2301,6 @@
   year      = {2017}
 }
 
-
 @article{Lun2017a,
   author  = {Lun, Zhaoliang and Gadelha, Matheus and Kalogerakis, Evangelos and Maji, Subhransu and Wang, Rui},
   title   = {{3D} shape reconstruction from sketches via multi-view convolutional networks},
@@ -2307,11 +2308,19 @@
   year    = {2017}
 }
 
+
 @inproceedings{Lyu2020,
   author    = {Yecheng Lyu and Xinming Huang and Ziming Zhang},
   title     = {Learning to segment {3D} point clouds in {2D} image space},
   booktitle = CVPR,
   year      = {2020}
+}
+
+@inproceedings{Ma2022,
+  title     = {Rethinking network design and local geometry in point cloud: A simple residual {MLP} framework},
+  author    = {Ma, Xu and Qin, Can and You, Haoxuan and Ran, Haoxi and Fu, Yun},
+  booktitle = ICLR,
+  year      = {2022}
 }
 
 @article{Maaten2008,
